k8s/traefik/03_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.keindev.ru`)
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authentik
          namespace: authentik
    - kind: Rule
      match: "Host(`traefik.keindev.ru`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: authentik-server.authentik.svc.cluster.local
  tls:
    secretName: local-keindev-ru-tls
